# pleblottery

./: Cargo.toml  README.md  pleblottery-config.toml  pool-config.toml
src/: args.rs  error.rs  main.rs  status.rs
src/downstream_sv1/: diff_management.rs  downstream.rs  mod.rs
src/downstream_sv2/: mod.rs
src/lottery/: message_handler.rs  mod.rs  setup_connection.rs
src/mining_pool/: message_handler.rs  mod.rs  setup_connection.rs
src/template_receiver/: mod.rs  setup_connection.rs
src/tproxy/: bridge.rs  mod.rs  next_mining_notify.rs
src/upstream_sv2/: diff_management.rs  upstream.rs  upstream_connection.rs
