[package]
name = "pleblottery"
version = "0.1.0"
edition = "2021"
description = "SV2/SRI-based hashrate aggregator for a pleb-friendly solo/lottery Bitcoin mining experience."

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3"}
toml = { version = "*", git = "https://github.com/diondokter/toml-rs", default-features = false, rev = "c4161aa" }

pool_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
translator_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
mining_proxy_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
roles_logic_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
sv1_api = { git = "https://github.com/stratum-mining/stratum.git" }
async-channel = "1.9.0"
async-std = "1.12.0"
futures = "0.3.30"