[package]
name = "pleblottery"
version = "0.1.0"
edition = "2021"
description = "SV2/SRI-based hashrate aggregator for a pleb-friendly solo/lottery Bitcoin mining experience."

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3"}
toml = { version = "*", git = "https://github.com/diondokter/toml-rs", default-features = false, rev = "c4161aa" }

#pool_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
#translator_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
mining_proxy_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
roles_logic_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
sv1_api = { git = "https://github.com/stratum-mining/stratum.git" }
binary_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
stratum-common = { git = "https://github.com/stratum-mining/stratum.git" }
const_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
framing_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
noise_sv2 = { git = "https://github.com/stratum-mining/stratum.git" }
codec_sv2 = { git = "https://github.com/stratum-mining/stratum.git", features = ["noise_sv2"] }
secp256k1 = { version = "0.28.2", default-features = false, features =["alloc","rand","rand-std"] }
error_handling = { git = "https://github.com/stratum-mining/stratum.git" }
network_helpers = { git = "https://github.com/stratum-mining/stratum.git", features=["async_std", "with_buffer_pool"] }
key-utils = { git = "https://github.com/stratum-mining/stratum.git" }
async-channel = "1.9.0"
async-std = "1.12.0"
async-recursion = "1.0.0"

futures = "0.3.30"
nohash-hasher = "0.2.0"
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
rand = "0.8.5"
sha2 = "0.9.9"
tokio-util = { version = "*", features = ["codec"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
async-compat = "0.2.1"
